# embedded-mono

./: CMakeLists.txt  vcpkg.json
cmake/module/: FindMono2.cmake
src/: main.cpp
src/Managed/: .gitignore  Managed.sln
src/Managed/Interop/: DisplayConfiguration.cs  Interop.cs  Interop.csproj  Native.cs
src/Managed/Interop/Glass/: Persistent.cs
src/scripts/Interop/: Interop.sln
src/scripts/Interop/Interop/: .gitignore  Configuration.cs  GraphicsConfiguration.cs  Interop.cs  Interop.csproj
